# TDMiL-artifact

./: .gitignore  .gitmodules  Makefile.include  Makefile.vars  README.md
RIOT/sys/: Makefile.dep
apps/FL_ML_client/: Makefile  README.md  main.c
apps/coap_exp/: Makefile  README.md  client.c.bck  fl_cbor.c  fl_cbor.h  fl_coap_client.c  fl_coap_client.h  main.c
apps/coap_py_exp/: .gitignore  README.md  aggregator.py  aggrerator.py  basic_client.py  basic_server.py  client_c0.py  client_c1.py  client_c2.py  client_c3.py  client_listener.py  clients.sh  clients_all.py  host_server.py  pyshark_sniff.py  requirements.txt  server_listener.py
apps/coap_test/: Makefile  main.cpp
apps/comm_stack/: Makefile  README.md  main.c
apps/eigen_cancer/: Makefile  main.cpp
apps/eigen_iris/: Makefile  heap.c  heap.h  main.cpp
apps/eigen_test/: Makefile  helper.h  main.cpp
apps/eigen_wine/: Makefile  helper.cpp  main.cpp
apps/fl_rpc/: Makefile  README.md  main.c
apps/line_test/: Makefile  README.md  main.cpp
coaperator/: main.py  pyproject.toml
coaperator/models/: device.py  ml.py
coaperator/pkg/: channel.py  client.py  mlcontrol.py  mlmodelstore.py  site.py
coaperator/tests/: cancer.json  fc3_weight.h  wine.json
doc/api/: openapi.yaml
radvd.d/: radvd.conf  radvd.pid
tools/coaperator/: README.md  main.py  pyproject.toml  requirements.txt
tools/coaperator/models/: control.py  device.py  ml.py
tools/coaperator/pkg/: channel.py  client.py  corerd.py  device.py  mlcontrol.py  mlmodelstore.py  site.py
tools/coaperator/tests/: iris.json  model_fc3.json
(+78 files in other folders)
